--- a/20201102_CarData_Julien.ipynb
+++ b/20201102_CarData_Julien.ipynb
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
     "        self.slr_intercept = y_mean - slope * x_mean\n",
     "       \n",
     "    def fit(self):\n",
-    "        print(\"Slope: %f, Intercept: %f\" % (self.slr_slope, self.slr_intercept))\n",
+    "        return (self.slr_slope, self.slr_intercept)\n",
     "        \n",
     "    def predict(self, x):\n",
     "        return self.slr_slope * x + self.slr_intercept\n",
@@ -878,12 +878,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test de la classe avec l'instance testReg :"
+    "Test de la classe avec une instance testReg :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -891,19 +891,19 @@
      "output_type": "stream",
      "text": [
       "Slope: 0.415092, Intercept: -831.178925\n",
-      "Year 0: -831.178925\n",
-      "Year 2003: 0.249740\n",
-      "Year 2030: 11.457216\n"
+      "Predicting Year 0: -831.178925\n",
+      "Predicting Year 2003: 0.249740\n",
+      "Predicting Year 2030: 11.457216\n"
      ]
     }
    ],
    "source": [
     "testReg = SimpleLinReg(Xs=car_data[\"Year\"],Ys=car_data[\"Selling_Price\"])\n",
     "\n",
-    "testReg.fit()\n",
-    "print(\"Year 0: %f\" % testReg.predict(0))\n",
-    "print(\"Year 2003: %f\" % testReg.predict(2003))\n",
-    "print(\"Year 2030: %f\" % testReg.predict(2030))"
+    "print(\"Slope: %f, Intercept: %f\" % testReg.fit())\n",
+    "print(\"Predicting Year 0: %f\" % testReg.predict(0))\n",
+    "print(\"Predicting Year 2003: %f\" % testReg.predict(2003))\n",
+    "print(\"Predicting Year 2030: %f\" % testReg.predict(2030))"
    ]
   },
   {
